corrects recommendation request
